README with project details and instructions
Added detailed project description, technologies used, and instructions for compilation and execution. Updated project structure and features.